ocaml/testsuite/tests/typing-missing-cmi-indirections/test.compilers.reference
File "client.ml", line 2, characters 0-19:
2 | and alias = missing
    ^^^^^^^^^^^^^^^^^^^
Error: 
       The kind of alias is top
         because the .cmi file for Missing.t is missing.
       But the kind of alias must be a subkind of value
         because the type argument of list has kind value.
       No .cmi file found containing Missing.t.
       Hint: Adding "missing" to your dependencies might help.
